<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_marginTop="-25dp"
        android:src="@drawable/getwaves2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/montserratblack"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserratbold"
        android:gravity="center_horizontal"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserratbold"
        android:gravity="center_horizontal"
        android:text="@string/pass"
        android:textAlignment="center"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        />

    <ProgressBar
        android:id="@+id/registerProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        style="@style/Widget.AppCompat.ProgressBar"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnregister"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/register"
        android:fontFamily="@font/montserratmedium"
        android:textColor="@color/colorSplash"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserratregular"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/signinhere"
        android:clickable="true"/>



</LinearLayout>