<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/btnbackcp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="20dp"
        android:src="@drawable/ic_arrow_back_black_30dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo_jogja_circle" />

    <TextView
        android:id="@+id/txtUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratmedium"
        android:text="username@email.com"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:src="@drawable/line5" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserratbold"
        android:gravity="center_horizontal"
        android:text="@string/oldpass"
        android:textAlignment="center"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserratbold"
        android:gravity="center_horizontal"
        android:text="@string/newpass"
        android:textAlignment="center"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserratbold"
        android:gravity="center_horizontal"
        android:text="@string/confirm"
        android:textAlignment="center"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        />

    <ProgressBar
        android:id="@+id/cPassProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        style="@style/Widget.AppCompat.ProgressBar"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnsave"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/save"
        android:fontFamily="@font/montserratmedium"
        android:textColor="@color/colorSplash"
        android:background="@color/colorPrimary"/>

</LinearLayout>