<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity"
    android:background="@drawable/background1">


    <TextView
        android:id="@+id/txtJogja"
        android:layout_width="334dp"
        android:layout_height="115dp"
        android:width="484dp"
        android:text="@string/jogja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334"
        android:fontFamily="@font/geosans_light"
        android:textSize="6pt"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/bttnFood"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button1"
        android:drawableTop="@drawable/ic_049_food"
        android:shadowColor="@color/shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <TextView
        android:id="@+id/txtresto"
        android:layout_width="51dp"
        android:layout_height="14dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/geosans_light"
        android:text="@string/resto"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttnFood"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bttnHotel"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button1"
        android:drawableTop="@drawable/ic_026_hotel"
        android:shadowColor="@color/shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toEndOf="@+id/bttnFood"
        app:layout_constraintTop_toBottomOf="@+id/txtJogja"
        app:layout_constraintVertical_bias="0.146" />

    <TextView
        android:id="@+id/txtHotel"
        android:layout_width="46dp"
        android:layout_height="15dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/geosans_light"
        android:text="@string/hotel"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toEndOf="@+id/txtresto"
        app:layout_constraintTop_toBottomOf="@+id/bttnHotel"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bttnTour"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button1"
        android:drawableTop="@drawable/ic_015_mountain"
        android:shadowColor="@color/shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintStart_toEndOf="@+id/bttnHotel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <TextView
        android:id="@+id/txtTour"
        android:layout_width="46dp"
        android:layout_height="15dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/geosans_light"
        android:text="@string/tour"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toEndOf="@+id/txtHotel"
        app:layout_constraintTop_toBottomOf="@+id/bttnTour"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/search_bar"
        android:drawableEnd="@drawable/ic_search_black_24dp"
        android:inputType="text"
        android:text="@string/hint"
        android:fontFamily="@font/geosans_light"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txtJogja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049"/>

    <Button
        android:id="@+id/bttnProfile"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bulet"
        android:drawableTop="@drawable/ic_016_tourist"
        android:shadowColor="@color/shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/searchBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtBucketL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="236dp"
        android:fontFamily="@font/montserratbold"
        android:text="@string/bucketlist"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtresto"
        app:layout_constraintVertical_bias="0.678" />

    <TextView
        android:id="@+id/txtDescBL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/geosans_light"
        android:text="@string/desBL"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/slideBL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBucketL"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/slideBL"
        android:layout_width="387dp"
        android:layout_height="202dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHotel"
        app:layout_constraintVertical_bias="0.804" />


</androidx.constraintlayout.widget.ConstraintLayout>